@@ -292,13 +292,13 @@ public class BulkLoadNineDashThreeCSV implements ThreadListener, AddOn {
 				for( String sID : data.listTagIds() ) {
 					Animal animal = new Animal(sSpeciesCode, sID);
 					animal.sex = sGender;
-					animal.inspectionDate = StdeCviXmlModel.dateFormat.format(data.getInspectionDate());
+					animal.inspectionDate = StdeCviXmlModel.getDateFormat().format(data.getInspectionDate());
 					xmlModel.addAnimal(animal);
 					iNumTags++;
 				}
 			}
 			if( iNumTags < iNum ) {
-				Double dNum = new Double(iNum - iNumTags);
+				Double dNum = Double.valueOf(iNum - iNumTags);
 				GroupLot group = new GroupLot(sSpeciesCode, dNum);
 				group.sex = sGender;
 				group.description = "Poultry Lot Under NPIP 9-3";
